add new I/O based on OpenCV 2

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 LIBOPENCV = $(shell pkg-config --cflags --libs opencv)
-convert_cuda: ../bin/convert_cuda
+convert_cuda: cuda.cu
 	nvcc cuda.cu -o ../bin/convert_cpu $(LIBOPENCV)
 
-convert_cpu: ../bin/convert_cpu
+convert_cpu: cpu.cpp
 	g++ cpu.cpp -o ../bin/convert_cpu $(LIBOPENCV)
 
 all: convert_cpu convert_cuda
